# PleaSQLarify-replication

./: .gitignore  README.md  pyproject.toml
docs/: 01-replication-notes.md  02-execution-results.md  03-findings-and-decisions.md  04-experiments.md  05-authors-pools-rerun.md
docs/chi-study/: 03-deviations-and-adaptations.md  04-team-site-report.md  05-materials-and-data-manifest.md
docs/results/: convergence_summary.json  coverage_by_type.json  goldk_sensitivity.json  real_eval_results.csv  run_log.txt
experiments/: NOTICE.md  README.md
scripts/: run_authors_pools.py  run_experiment.py  run_real_eval.py  run_sweep.py
specs/: README.md
specs/algorithm/: 03-candidate-generation.md  04-functional-clustering.md  05-atomic-feature-extraction.md  06-decision-variables.md  07-information-gain-ranking.md  08-iterative-repair-loop.md
specs/evaluation/: 09-baselines.md  10-ambrosia-quantitative-eval.md  16-assumption-sweep.md  17-authors-supplement.md
specs/foundations/: 01-environment-and-data.md  02-data-model-and-notation.md
specs/interface/: 11-backend-api.md  12-action-space.md  13-decision-space.md  14-predicted-query-and-output.md
specs/study/: 15-user-study-protocol.md
src/pleasqlarify/: authors_config.py  candidate_space.py  session.py
src/pleasqlarify/data/: ambrosia.py  authors_pools.py  demo.py  execution.py
src/pleasqlarify/eval/: conditions.py  interpretation_span.py  metrics.py  oracle.py  plot_figure5.py  run_benchmark.py
src/pleasqlarify/experiment/: recorder.py  runner.py  sweep.py
src/pleasqlarify/llm/: client.py
src/pleasqlarify/model/: types.py
src/pleasqlarify/pipeline/: belief.py  cluster.py  decision_vars.py  embed.py  features.py  generate.py  mining.py  project.py  ranking.py  repair_loop.py
src/pleasqlarify/server/: app.py  cli.py  views.py
src/pleasqlarify/server/static/: app.js  index.html  styles.css
tests/: conftest.py  test_ablation.py  test_aligned_similarity.py  test_ambrosia_loader.py  test_authors_config.py  test_authors_pools.py  test_candidate_space.py  test_cluster_embed.py  test_decision_vars.py  test_end_to_end.py  test_eval_benchmark.py  test_execution.py  test_experiment.py  test_features.py  test_features_setops.py  test_gold_assignment_exec.py  test_interpretation_span.py  test_metrics.py  test_mining.py  test_ranking_belief.py  test_real_backends.py  test_server_api.py  test_session_loop.py  test_sweep.py  test_sweep_axes.py  test_views.py
