[project]
name = "pleasqlarify"
version = "0.1.0"
description = "Replication of PleaSQLarify: Visual Pragmatic Repair for Natural Language Database Querying (CHI '26)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Changkun Ou" }]
dependencies = [
    # Core pipeline — deliberately minimal so the whole algorithm + eval is
    # testable offline with no model downloads or network. See specs/README.md.
    "numpy>=1.26",
    "sqlglot>=25.0",
]

[project.optional-dependencies]
# Real research-fidelity backends. The core runs without these via deterministic
# fallbacks (spec 04 embedder, spec 12 projection, spec 03 generation).
embeddings = ["sentence-transformers>=3.0"]
projection = ["umap-learn>=0.5"]
llm = ["openai>=1.40"]
data = ["datasets>=2.19"]
plots = ["matplotlib>=3.8"]
server = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
all = [
    "sentence-transformers>=3.0",
    "umap-learn>=0.5",
    "openai>=1.40",
    "datasets>=2.19",
    "matplotlib>=3.8",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pleasqlarify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
# Keep the default sync lean; install extras explicitly (e.g. `uv sync --extra all`).
